2003-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (GetLogBlob): Return an error if log.mgk can not
	be accessed.
	* locale/C.mgk: Added UnableToAccessLogFile.
	* magick/blob.c (GetConfigureBlob): Only return result of
	NTResourceToBlob if it is non-NULL.
	* magick/type.c (GetTypeBlob): Search $MAGICK_HOME for
	type.mgk. Only return result of NTResourceToBlob if it is
	non-NULL.
	* magick/magick.c (GetMagickInfo): Return an error if GetModuleInfo
	reports an error.
	* magick/module.c (GetModuleInfo): Return an error if modules.txt
	fails to load.
	* utility.c (SubstituteString): Fixed a bug which was introduced
	while updating the code to use the memory allocation macros.

2003-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/GraphicsMagick-config.in (usage): Added example
	usage to the help output.
	* magick/magick.c (InitializeMagick): Added a static flag to
	ensure that the Magick library is initialized only one time.
	(DestroyMagick): Ensure that Magick library resources are only
	destroyed if it has previously been initialized.
	* magick/nt_base.c (DllMain): Fix contributed by Achim Domma. For
	a DLL build, update PATH during Magick DLL initialization to
	include the directory where the Magick core DLL resides. This
	allows the loadable modules to find the core DLLs, even if the
	core DLLs are not already in the PATH.
	* magick/image.c (TextureImage): Incorporate new implementation
	authored by John Cristy of ImageMagick Studio.  This
	implementation is a full 7X (run-time) or 14X (user-time) faster
	than the original ImageMagick implementation, and is about 2X
	faster than the speeded-up version I commited on the 19th.

2003-05-20  William Radcliffe  <billr@corbis.com>

	* VisualMagick\configure : Fixed bug with add on (plug-ins) not
	building automatically in DLL mode.

2003-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (TextureImage): Creation of tiled image textures