@@ -1,3 +1,10 @@
+2003-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/modules.mgk: Add missing mappings for PNG8,
+	PNG24, and PNG32.
+	* VisualMagick/bin/modules.mgk: Add missing mappings for PNG8,
+	PNG24, and PNG32.
+
 2003-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/log.c (GetLogBlob): Return an error if log.mgk can not
